--- a/pages/index.html
+++ b/pages/index.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="http://www.mysite.com/favicon.ico" />
     <!-- css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
@@ -27,12 +28,13 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../resources/css/styles.css" />
     <!-- js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script defer src="../resources/js/pattern/ui-swiper.js"></script>
-    <script defer src="../resources/js/pattern/ui-pattern-script.js"></script>
+    <script defer src="../resources/js/ui-swiper.js"></script>
+    <script defer src="../resources/js/ui-pattern-script.js"></script>
     <script defer src="../resources/js/include.js"></script>
   </head>
   <body>
@@ -45,32 +47,190 @@
         <div class="inner">
           <h1 id="logo">
             <a href="#">
-              <span>키아프서울</span>
+              <span class="blind">키아프서울</span>
             </a>
           </h1>
           <div class="util">
             <button class="lang">
-              <span>영어로 보기</span>
+              <span class="blind">영어로 보기</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                <g transform="rotate(-90, 12, 12)">
+                  <circle cx="12" cy="12" r="11" stroke-width="1.7" fill="none" />
+                  <line x1="1" y1="12" x2="23" y2="12" stroke-width="1.7" />
+                  <ellipse cx="12" cy="12" rx="11" ry="5.5" stroke-width="1.7" fill="none" />
+                  <line x1="12" y1="1" x2="12" y2="23" stroke-width="1.7" />
+                </g>
+              </svg>
             </button>
             <button class="all-menu">
-              <span>전체메뉴</span>
+              <span class="blind">전체메뉴</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <line x1="2" y1="3" x2="22" y2="3"></line>
+                <line x1="2" y1="12" x2="16" y2="12"></line>
+                <line x1="2" y1="21" x2="22" y2="21"></line>
+              </svg>
             </button>
           </div>
         </div>
-        <hr />
+        <!-- active 추가시 활성화 -->
+        <nav id="nav-all" class="">
+          <h2 class="nav-all__tit">Menu</h2>
+          <ul class="gnb">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Insights</a></li>
+            <li><a href="#">Archive</a></li>
+            <li><a href="#">Partnes</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <button class="btn-close">
+            <span class="blind">메뉴닫기</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <line
+                x1="2"
+                y1="2"
+                x2="22"
+                y2="22"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <line
+                x1="22"
+                y1="2"
+                x2="2"
+                y2="22"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+        </nav>
       </header>
       <div class="intro">
         <div class="inner">
           <div class="intro__txt">
-            <p class="">고정 텍스트</p>
-            <p class="">움직이는 텍스트</p>
+            <p class="">We Connect</p>
+            <p class="">_ Art & Future</p>
           </div>
-          <div class="intro__vid">비디오</div>
+          <div class="intro__vid">
+            비디오
+            <p style="font-weight: 500">프리텐다드</p>
+            <p style="font-weight: 800">pretandard</p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 26 26" width="24" height="24">
+              <g transform="rotate(-90, 12, 12)">
+                <circle cx="12" cy="12" r="12" stroke="black" stroke-width="1.5" fill="none" />
+                <line x1="1.5" y1="12" x2="22.5" y2="12" stroke="black" stroke-width="1.5" />
+                <ellipse cx="12" cy="12" rx="12" ry="6" stroke="black" stroke-width="1.5" fill="none" />
+                <line x1="12" y1="1.5" x2="12" y2="22.5" stroke="black" stroke-width="1.5" />
+              </g>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+              <g transform="rotate(-90, 12, 12)">
+                <circle cx="12" cy="12" r="11" stroke="black" stroke-width="1.5" fill="none" />
+                <line x1="1" y1="12" x2="23" y2="12" stroke="black" stroke-width="1.5" />
+                <ellipse cx="12" cy="12" rx="11" ry="5.5" stroke="black" stroke-width="1.5" fill="none" />
+                <line x1="12" y1="1" x2="12" y2="23" stroke="black" stroke-width="1.5" />
+              </g>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <line
+                x1="2"
+                y1="2"
+                x2="22"
+                y2="22"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <line
+                x1="22"
+                y1="2"
+                x2="2"
+                y2="22"
+                stroke="black"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
         </div>
       </div>
       <main id="container">
         <div class="sec-card">
-          <div class="inner">card</div>
+          <div class="inner">
+            <div class="card__area">
+              <div class="card__item since">
+                <h3>since</h3>
+              </div>
+              <div class="card__item new">
+                <h3>new</h3>
+              </div>
+              <div class="wrapper-link">
+                <div class="card__item map">
+                  <h3>map</h3>
+                </div>
+                <a href="#" class="card__item kiafrieze">바로가기1</a>
+                <a href="#" class="card__item membership">바로가기2</a>
+              </div>
+              <div class="wrapper-insight">
+                <div class="card__item livetalk">
+                  <h3>live&talk</h3>
+                </div>
+                <div class="card__item article">
+                  <h3>article</h3>
+                </div>
+              </div>
+              <div class="wrapper-acco">
+                <div class="card__item acco01">
+                  <h3>Past Exhibitor</h3>
+                </div>
+                <div class="card__item acco02">
+                  <h3>Special Exhibition</h3>
+                </div>
+                <div class="card__item acco03">
+                  <h3>Program</h3>
+                </div>
+              </div>
+              <div class="wrapper-goto">
+                <a href="#" class="card__item frieze">
+                  <div class="icon-box"></div>
+                  <div class="txt-box">
+                    <strong class="title">Frieze Seoul</strong>
+                    <span class="btn-goto"><span class="blind">새창열림</span></span>
+                  </div>
+                </a>
+                <a href="#" class="card__item exhibitor">
+                  <div class="icon-box"></div>
+                  <div class="txt-box">
+                    <strong class="title">Exhibitor</strong>
+                    <span class="btn-goto"><span class="blind">새창열림</span></span>
+                  </div>
+                </a>
+                <a href="#" class="card__item partner">
+                  <div class="icon-box"></div>
+                  <div class="txt-box">
+                    <strong class="title">Partner</strong>
+                    <span class="btn-goto"><span class="blind">새창열림</span></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="sec-slide">
