sec-card 레이아웃 구성

--- a/pages/index.html
+++ b/pages/index.html
@@ -125,49 +125,7 @@
             <p class="">We Connect</p>
             <p class="">_ Art & Future</p>
           </div>
-          <div class="intro__vid">
-            비디오
-            <p style="font-weight: 500">프리텐다드</p>
-            <p style="font-weight: 800">pretandard</p>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 26 26" width="24" height="24">
-              <g transform="rotate(-90, 12, 12)">
-                <circle cx="12" cy="12" r="12" stroke="black" stroke-width="1.5" fill="none" />
-                <line x1="1.5" y1="12" x2="22.5" y2="12" stroke="black" stroke-width="1.5" />
-                <ellipse cx="12" cy="12" rx="12" ry="6" stroke="black" stroke-width="1.5" fill="none" />
-                <line x1="12" y1="1.5" x2="12" y2="22.5" stroke="black" stroke-width="1.5" />
-              </g>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-              <g transform="rotate(-90, 12, 12)">
-                <circle cx="12" cy="12" r="11" stroke="black" stroke-width="1.5" fill="none" />
-                <line x1="1" y1="12" x2="23" y2="12" stroke="black" stroke-width="1.5" />
-                <ellipse cx="12" cy="12" rx="11" ry="5.5" stroke="black" stroke-width="1.5" fill="none" />
-                <line x1="12" y1="1" x2="12" y2="23" stroke="black" stroke-width="1.5" />
-              </g>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <line
-                x1="2"
-                y1="2"
-                x2="22"
-                y2="22"
-                stroke="black"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <line
-                x1="22"
-                y1="2"
-                x2="2"
-                y2="22"
-                stroke="black"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </div>
+          <div class="intro__vid"></div>
         </div>
       </div>
       <main id="container">
@@ -175,35 +133,71 @@
           <div class="inner">
             <div class="card__area">
               <div class="card__item since">
-                <h3>since</h3>
+                <a href="#">
+                  <h3>since</h3>
+                  <div class="txt-box">
+                    <strong class="title">about and history</strong>
+                    <span class="btn-goto"><span class="blind">새창열림</span></span>
+                  </div></a
+                >
               </div>
-              <div class="card__item new">
-                <h3>new</h3>
+              <div class="card__item news">
+                <a href="#">
+                  <h3>news</h3>
+                  <strong>아트페어의 의미있는 움직임</strong>
+                </a>
               </div>
               <div class="wrapper-link">
                 <div class="card__item map">
                   <h3>map</h3>
                 </div>
-                <a href="#" class="card__item kiafrieze">바로가기1</a>
-                <a href="#" class="card__item membership">바로가기2</a>
+                <a href="#" class="card__item kiafrieze"
+                  ><div class="icon-box"></div>
+                  <div class="txt-box">
+                    <strong class="title">kiafrieze</strong>
+                    <span class="btn-goto"><span class="blind">새창열림</span></span>
+                  </div></a
+                >
+                <a href="#" class="card__item membership"
+                  ><div class="icon-box"></div>
+                  <div class="txt-box">
+                    <strong class="title">member</strong>
+                    <span class="btn-goto"><span class="blind">새창열림</span></span>
+                  </div></a
+                >
               </div>
-              <div class="wrapper-insight">
-                <div class="card__item livetalk">
-                  <h3>live&talk</h3>
-                </div>
-                <div class="card__item article">
-                  <h3>article</h3>
-                </div>
+
+              <div class="card__item livetalk">
+                <a href="#">
+                  <h3 class="head">live&talk</h3>
+                  <span class="btn-goto"><span class="blind">바로가기</span></span>
+                </a>
               </div>
+              <div class="card__item article">
+                <a href="#">
+                  <h3 class="head">Article</h3>
+                  <span class="btn-goto"><span class="blind">바로가기</span></span>
+                </a>
+              </div>
+
               <div class="wrapper-acco">
                 <div class="card__item acco01">
-                  <h3>Past Exhibitor</h3>
+                  <a href="#">
+                    <h3 class="head">Past Exhibitor</h3>
+                    <span class="btn-goto"><span class="blind">바로가기</span></span>
+                  </a>
                 </div>
                 <div class="card__item acco02">
-                  <h3>Special Exhibition</h3>
+                  <a href="#">
+                    <h3 class="head">Special Exhibition</h3>
+                    <span class="btn-goto"><span class="blind">바로가기</span></span>
+                  </a>
                 </div>
                 <div class="card__item acco03">
-                  <h3>Program</h3>
+                  <a href="#">
+                    <h3 class="head">Program</h3>
+                    <span class="btn-goto"><span class="blind">바로가기</span></span>
+                  </a>
                 </div>
               </div>
               <div class="wrapper-goto">
@@ -321,6 +315,38 @@
                       </a>
                     </div>
                     <!-- 슬라이드 5 -->
+                    <div class="swiper-slide cont-item">
+                      <a href="#">
+                        <div class="image-box">
+                          <img src="https://static-edge.kiaf.org/web/2024/07/30170701/somewhere-6.jpg" alt="" />
+                        </div>
+                        <div class="txt-box">
+                          <span class="date">2024. 10. 4 - 10. 26</span>
+                          <span class="place">gallery NoW</span>
+                          <strong class="title">빛, 있음</strong>
+                          <p class="desc">
+                            순수한 빛을 연구해온 황선태의 이번 선택은 ‘빛 자체가 지닌 존재성’에 관한 것이다. 작가의
+                            작품은 크게 빛, 간유리, 선으로 구성된다.
+                          </p>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="swiper-slide cont-item">
+                      <a href="#">
+                        <div class="image-box">
+                          <img src="https://static-edge.kiaf.org/web/2024/07/30170701/somewhere-6.jpg" alt="" />
+                        </div>
+                        <div class="txt-box">
+                          <span class="date">2024. 10. 4 - 10. 26</span>
+                          <span class="place">gallery NoW</span>
+                          <strong class="title">빛, 있음</strong>
+                          <p class="desc">
+                            순수한 빛을 연구해온 황선태의 이번 선택은 ‘빛 자체가 지닌 존재성’에 관한 것이다. 작가의
+                            작품은 크게 빛, 간유리, 선으로 구성된다.
+                          </p>
+                        </div>
+                      </a>
+                    </div>
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
