이미지 경로 수정

--- a/pages/index.html
+++ b/pages/index.html
@@ -148,7 +148,7 @@
           </div>
           <div class="intro__vid">
             <video id="introVideo" loop autoplay muted playsinline>
-              <source src="../resources/images/pattern/common/Kiaf SEOUL 2024   SNAP].mp4" type="video/mp4" />
+              <source src="../resources/images/pattern/common/intro.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
