--- a/pages/index.html
+++ b/pages/index.html
@@ -19,11 +19,11 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/bold/style.css" />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" /> -->
+    <!-- <link
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-    />
+    /> -->
     <link
       rel="stylesheet"
       as="style"
@@ -34,11 +34,13 @@
     <link rel="stylesheet" href="../resources/css/pattern_css.css" />
     <!-- js -->
     <script src="https://unpkg.com/@phosphor-icons/web@2.1.1"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
     <script defer src="../resources/js/ui-swiper.js"></script>
     <script defer src="../resources/js/ui-pattern-script.js"></script>
     <script defer src="../resources/js/include.js"></script>
@@ -52,7 +54,7 @@
       <header id="header">
         <div class="inner">
           <h1 id="logo">
-            <a href="#">
+            <a href="#" class="logo__link">
               <span class="blind">키아프서울</span>
             </a>
           </h1>
@@ -128,7 +130,6 @@
       <div class="intro">
         <div class="inner">
           <div class="intro__txt">
-            <!-- <p class="fixed-txt">We Connect</p> -->
             <p class="fixed-txt">
               <span>W</span>
               <span>e</span>
@@ -147,19 +148,20 @@
             </p>
           </div>
           <div class="intro__vid">
-            <video id="introVideo" loop autoplay muted playsinline>
+            <video id="introVideo" loop muted playsinline>
               <source src="../resources/images/pattern/common/intro.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
       </div>
       <main id="container">
-        <div class="sec-card">
+        <div class="sec-g sec-card">
           <div class="inner">
-            <div class="card__area">
+            <h2 class="sec-card__title blind"></h2>
+            <div class="sec-card__cont">
               <div class="card__item news">
                 <a href="#" class="card__link">
-                  <div class="bottom-box">
+                  <div class="top-box">
                     <span class="category">News</span>
                     <strong class="title">Discovering Meaningful Trends in Art Fairs Today</strong>
                   </div>
@@ -212,9 +214,9 @@
                   ></span>
                 </a>
               </div>
-              <div class="wrapper-archive">
+              <div class="wrapper-archive wrapper-accordion">
                 <div class="mobile">
-                  <div class="card__item archive-1">
+                  <div class="card__item archive-1 archive">
                     <a href="#" class="card__link">
                       <span class="category">Archive</span>
                       <div class="bottom-box">
@@ -223,7 +225,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="card__item archive-2">
+                  <div class="card__item archive-2 gallery">
                     <a href="#" class="card__link">
                       <span class="category">Gallery</span>
                       <div class="bottom-box">
@@ -232,7 +234,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="card__item archive-3">
+                  <div class="card__item archive-3 seminar">
                     <a href="#" class="card__link">
                       <span class="category">Seminar</span>
                       <div class="bottom-box">
@@ -243,31 +245,39 @@
                   </div>
                 </div>
                 <div class="desktop">
-                  <div class="card__item archive-1">
+                  <div class="card__item archive-1 archive">
                     <a href="#" class="card__link">
+                      <div class="bg-box"></div>
                       <div class="top-box">
-                        <span class="category">Archive</span>
-                        <strong class="title">Past Exhibitor</strong>
+                        <div class="left-box">
+                          <span class="category">Archive</span>
+                          <strong class="title">Past Exhibitor</strong>
+                        </div>
+                        <span class="btn-more"><span class="blind">바로가기</span></span>
                       </div>
-                      <span class="btn-more"><span class="blind">바로가기</span></span>
                     </a>
                   </div>
                   <div class="card__item archive-2">
                     <a href="#" class="card__link">
+                      <div class="bg-box"></div>
                       <div class="top-box">
-                        <span class="category">Gallery</span>
-                        <strong class="title">Exhibition</strong>
+                        <div class="left-box">
+                          <span class="category">Gallery</span>
+                          <strong class="title">Exhibition</strong>
+                        </div>
+                        <span class="btn-more"><span class="blind">바로가기</span></span>
                       </div>
-                      <span class="btn-more"><span class="blind">바로가기</span></span>
                     </a>
                   </div>
                   <div class="card__item archive-3">
                     <a href="#" class="card__link">
+                      <div class="bg-box"></div>
                       <div class="top-box">
-                        <span class="category">Seminar</span> <strong class="title">Program</strong>
+                        <div class="left-box">
+                          <span class="category">Seminar</span> <strong class="title">Program</strong>
+                        </div>
+                        <span class="btn-more"><span class="blind">바로가기</span></span>
                       </div>
-
-                      <span class="btn-more"><span class="blind">바로가기</span></span>
                     </a>
                   </div>
                 </div>
@@ -297,7 +307,7 @@
           </div>
         </div>
 
-        <div class="sec-slide">
+        <div class="sec-g sec-slide">
           <div class="inner">
             <div class="inner-slide">
               <div class="sec-slide__tit">
@@ -311,10 +321,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img
-                            src="https://static-edge.kiaf.org/web/2024/09/27101818/7.-%EB%AE%8C-%EC%8A%B5%EA%B4%80%EC%A0%81-%EC%97%B4%EC%A0%95.jpg"
-                            alt=""
-                          />
+                          <img src="/resources/images/pattern/common/sec-slide_01.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -331,10 +338,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img
-                            src="https://static-edge.kiaf.org/web/2024/09/27110320/Gravity_acrylic-on-canvas_160%C3%97160%E3%8E%9D_2024.jpg"
-                            alt=""
-                          />
+                          <img src="/resources/images/pattern/common/sec-slide_02.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -351,10 +355,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img
-                            src="https://static-edge.kiaf.org/web/2024/09/27111345/%EA%B9%80%ED%9D%AC%EC%97%B0-%EC%98%A4%EB%91%90%EB%A7%89-60.5x60.5%E3%8E%9D-acrylic-on-linen-2024.jpg"
-                            alt=""
-                          />
+                          <img src="/resources/images/pattern/common/sec-slide_03.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -371,7 +372,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="https://static-edge.kiaf.org/web/2024/09/24162943/ASLSP-7.jpg" alt="" />
+                          <img src="/resources/images/pattern/common/sec-slide_04.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 9. 14 - 11. 23</span>
@@ -388,7 +389,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="https://static-edge.kiaf.org/web/2024/07/30170701/somewhere-6.jpg" alt="" />
+                          <img src="/resources/images/pattern/common/sec-slide_05.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -404,7 +405,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="https://static-edge.kiaf.org/web/2024/07/30170701/somewhere-6.jpg" alt="" />
+                          <img src="/resources/images/pattern/common/sec-slide_06.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -420,7 +421,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="https://static-edge.kiaf.org/web/2024/07/30170701/somewhere-6.jpg" alt="" />
+                          <img src="/resources/images/pattern/common/sec-slide_07.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -440,8 +441,9 @@
           </div>
         </div>
 
-        <div class="sec-goto">
+        <div class="sec-g sec-goto">
           <div class="inner">
+            <h2 class="sec-goto__title blind">바로가기</h2>
             <ul class="sec-goto__list">
               <li class="list__item contact">
                 <a href="#" class="list__link">
