--- a/pages/index.html
+++ b/pages/index.html
@@ -134,7 +134,7 @@
               <span>W</span>
               <span>e</span>
               <span class="blank"></span>
-              <span>C</span>
+              <span>c</span>
               <span>o</span>
               <span>n</span>
               <span>n</span>
@@ -148,8 +148,8 @@
             </p>
           </div>
           <div class="intro__vid">
-            <video id="introVideo" loop muted playsinline>
-              <source src="../resources/images/pattern/common/intro.mp4" type="video/mp4" />
+            <video id="introVideo" loop autoplay muted playsinline>
+              <source src="../resources/images/pattern/common/intro_soundcut.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -321,7 +321,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_01.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_01.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -338,7 +338,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_02.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_02.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -355,7 +355,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_03.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_03.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -372,7 +372,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_04.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_04.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 9. 14 - 11. 23</span>
@@ -389,7 +389,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_05.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_05.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -405,7 +405,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_06.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_06.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -421,7 +421,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="/resources/images/pattern/common/sec-slide_07.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_07.jpg" alt="" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
